# tetris

./: CMakeLists.txt  README.md  outline.txt
include/: L.h  block.h  empty.h  game_board.h  hat.h  line.h  screen.h  square.h  z.h
src/: main.c
src/blocks/: block.c  empty.c  line.c  square.c
src/game_board/: game_board.c
src/screen/: screen.c
